# demo3

./: .gitignore  CMakeLists.txt  app-build.sh  app.sh  debug-build.sh  debug.sh  readme.txt
.cache/clangd/index/: Escr23.cpp.BACC0F4E265FFCCB.idx  Escr23.hpp.C0E6F767E6EED180.idx  File.cpp.C5F4D4FC586EB377.idx  File.hpp.5947F4036A41C26D.idx  main.cpp.E1296A997EE8EFC5.idx
Nigromante/common/src/: File.cpp
Nigromante/escr23/: CMakeLists.txt
Nigromante/escr23/include/: Escr23.hpp
Nigromante/escr23/src/: Escr23.cpp
Nigromante/test/: CMakeLists.txt
Nigromante/test/src/: main.cpp
common/: CMakeLists.txt
common/include/: File.hpp
data/: a.escr23
data/a/: data.txt  info.ini  program.txt
escr23/include/: Escr23.hpp  Escr23Params.hpp
escr23/src/: Escr23.cpp
scripts/: app-build.sh  app.sh  debug-build.sh  debug.sh
test/: CMakeLists.txt
test/src/: main.cpp
